[gd_scene load_steps=2 format=3 uid="uid://cq6whniticog7"]

[ext_resource type="Script" path="res://scenes/MainMenu/SettingsMenu.gd" id="1_qkkjp"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qkkjp")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Spacer1" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="FullscreenLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -80.0
max_value = 20.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/GridContainer/MusicSlider"]
show_behind_parent = true
layout_mode = 0
offset_left = 435.0
offset_top = -2.0
offset_right = 439.0
offset_bottom = 18.0

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RetunButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 55.0
offset_right = -91.0
offset_bottom = 86.0
grow_horizontal = 0
text = "Return"

[connection signal="toggled" from="MarginContainer/VBoxContainer/GridContainer/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="RetunButton" to="." method="_on_retun_button_pressed"]
